--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -13,6 +13,7 @@ button {
   text-align: center;
   white-space: nowrap;
   min-height: 38px;
+  margin: 3px;
   padding: 8px 18px;
   border: 1px solid transparent;
   border-radius: 4px;
@@ -135,6 +136,7 @@ button {
 
 .btn-upload-container {
   @extend %focus--on;
+  margin: 3px;
 
   .inputfile {
     @include absolute();
@@ -171,6 +173,7 @@ button {
     margin-right: 0;
     margin-left: 0;
   }
+  margin: 3px;
 
   /**
   Hide the checkbox itself. Checking and unchecking 
@@ -205,6 +208,11 @@ button {
     z-index: 100;
     cursor: pointer;
     position: absolute;
+    margin: 0;
+
+    + .btn {
+      margin: 0;
+    }
   }
 
   /*  The ul will have display:none by default */
